--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "id": "left2y-trace",
-  "version": "1.1.0",
-  "platform": "mac",
+  "version": "1.2.0",
+  "platform": "mac,win",
   "name": "Raster to Vector",
   "logo": "assets/icon.png",
   "keywords": [
